# aegra

./: CLAUDE.md  CONTRIBUTING.md  README.md
docs/: sqlite.md
libs/aegra-api/: pyproject.toml
libs/aegra-api/src/aegra_api/: config.py  settings.py
libs/aegra-api/src/aegra_api/core/: database.py  migrations.py  orm.py  sqlite_store.py
libs/aegra-api/src/aegra_api/services/: event_store.py
libs/aegra-api/tests/integration/: test_cancel_run.py  test_streaming_errors.py
libs/aegra-api/tests/unit/test_api/: test_runs_streaming.py
libs/aegra-api/tests/unit/test_core/: test_database_manager.py  test_sqlite_migrations.py  test_sqlite_settings.py  test_sqlite_store.py
libs/aegra-api/tests/unit/test_services/: test_event_store.py
libs/aegra-cli/src/aegra_cli/: cli.py
libs/aegra-cli/src/aegra_cli/commands/: init.py
libs/aegra-cli/tests/: test_init.py
